welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:66: error: Missing closing brace `}' assumed here
  ecritMessage(num)
  ^ZigZag:67: error: Missing closing brace `}' assumed here
} 
^